# rust_notepad

./: .gitignore  Cargo.toml  License.md  Readme.md  build.rs
.cargo/: config.toml
src/: aes.rs  commands.rs  delegate.rs  error.rs  gen.rs  hash.rs  main.rs
src/backups/: mod.rs
src/backups/google_drive/: api.rs  credentials.rs  id.rs  mod.rs  oauth.rs  token.rs
src/ipc/: ipc_command.rs  mod.rs
src/secure/: cross.rs  mod.rs  windows.rs
src/state/: app_state.rs  config.rs  mod.rs  new_tab.rs  tab.rs  tab_content.rs  tab_state.rs  tabs.rs  tabs_state.rs
src/ui/: context_menu_controller.rs  copy_cut_paste_controller.rs  mod.rs  password_text.rs  tab_close_button.rs  tabs_dynamic_policy.rs  text_box_menu_factory.rs
src/ui/lens/: mod.rs  tab_state_to_password_lens.rs  tab_state_to_text_lens.rs  tabs_tate_to_tab_state_lens.rs
src/windows/: about_window.rs  backup_window.rs  dialog_window.rs  main_window.rs  mod.rs  new_file_window.rs
