[package]
name = "notepad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "2.1.2"
rust-crypto = "^0.2"
getrandom = "0.2.6"
druid = { git = "https://github.com/linebender/druid.git", features = ["im"]}
druid-shell = { git = "https://github.com/linebender/druid.git" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"