[package]
name = "notepad"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6"
open = "2.1"
rust-crypto = "^0.2"
named-lock = "0.2"
thiserror = "1.0"
base64 = "0.13"
byteorder = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
getrandom = { version ="0.2", features = ["std"] }
reqwest = { version = "0.11", features = ["blocking", "multipart", "json", "serde_json"] }
uuid = { version = "1.0.0", features = ["v4"] }
druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
druid-shell = { git = "https://github.com/linebender/druid.git" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["dpapi"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"